--- a/public/wcApLogin.html
+++ b/public/wcApLogin.html
@@ -34,7 +34,7 @@
 	<br><br>
 	<br><br>
 	<br>
-	<h1 style="text-align:center">The SAGE2 web control admin panel is locked.
+	<h1 style="text-align:center">The SAGE2 admin panel is locked.
 	</h1>
 
 	<br>
