--- a/public/wcLogin.html
+++ b/public/wcLogin.html
@@ -27,10 +27,11 @@
 	
 </head>
 
-<body onload="SAGE2_init()">
+<body onload="startup()">
 	<br>
 	<br>
 <br>
+    <img id='sageLogo' src="images/sage2_logo.png" alt="SAGE2">
 	<br><br>
 	<br><br>
 	<br>
@@ -40,12 +41,54 @@
 	<br>
 	
 	<h3 style="text-align:center">
-		Enter your password:<br>
+		Please enter password:
+		<br>
+		<br>
 		<input type="password" id="sessionValue" size="40" style="font-size: 1em;" tabindex="1">
     <br>
+    <br>
 
-    <button class="button_session" type="button" id="enterButton" onclick="buttonSubmit()"> Enter </button>
+    <button class="button_session" type="button" id="enterButton" onclick="buttonSubmit()" style='font-size:1.5em'> Enter </button>
 	</h3>
 
 </body>
 </html>
+
+
+<script type="text/javascript">
+
+	function startup() {
+
+		setSageLogoSize();
+		SAGE2_init();
+
+	}
+	
+
+	function setSageLogoSize() {
+		var workingDiv = document.getElementById('sageLogo');
+		var logoWidth = 800;
+		var logoHeight = 257;
+		var width = window.innerWidth;
+		var height = window.innerHeight;
+		width = width/2; //50%
+		height = height * .1; //10%
+
+		var ratio = width / logoWidth;
+		if( (ratio * logoHeight) <= height) {
+			height = ratio * logoHeight;
+		}
+		else {
+			ratio = height / logoHeight;
+			width = ratio * logoWidth;
+		}
+
+		workingDiv.style.left = ( window.innerWidth/2 - width/2) + 'px';
+		workingDiv.style.top = window.innerHeight * .05 + 'px';
+		workingDiv.style.position = 'absolute';
+		workingDiv.width = width;
+		workingDiv.height = height;
+
+	}
+
+</script>
