fixed issues with save confirm, alternate hosts, background options
Former-commit-id: 0ef8a1a0e8e0da8f624069510236cac77c92c1bd
Former-commit-id: 1c918aa7240a5ffed8fe73f5e1ba86155d7393b3

--- a/public/wcAdminPanel.html
+++ b/public/wcAdminPanel.html
@@ -105,7 +105,7 @@
     <hr>
     Background:
     <br>
-    #<input type='text' id='bgColor' size='6'> CSS hex color value to use as the background.
+    <input type='text' id='bgColor' size='8'> CSS hex color value to use as the background.
     <br>
     <input type='checkbox' id='bgClip'> Checking this off will clip the display at the exact resolution  
     <br>
@@ -121,7 +121,7 @@
     <br>
     <input type='text' id='bgWatermark' size='40'> (Optional) Path to a monochrome SVG from the public directory to use as watermark.
     <br>
-    R<input type='text' id='bgWmR' size='3'> G<input type='text' id='bgWmG' size='3'>  B<input type='text' id='bgWmB' size='3'>  A<input type='text' id='bgWmA' size='3'>     Color for the watermark. (R,G,B 0-255 | A 0-1)
+    <input type='text' id='bgWmColor' size='30'>   Color for the watermark. (R,G,B 0-255 | A 0-1)
     <br>
 
     <hr>
