updates to use user document directory
Former-commit-id: 24a8b887bbf2cbd9f2243adfb4b6511508d2ed13
Former-commit-id: 32ddc64921574f79f0c060a03fc1c55a3051d320

--- a/public/wcAdminPanel.html
+++ b/public/wcAdminPanel.html
@@ -69,12 +69,14 @@
     <input type="text" id="cfgRwidth"> Width
     <br>
     <input type="text" id="cfgRheight"> Height
-    <hr>
+    <br>
     Layout:
     <br>
     <input type="text" id="cfgLcolumns"> Columns
     <br>
     <input type="text" id="cfgLrows"> Rows
+    <br>
+    If you are going to use the web controller, then columns and rows should be set to 1 and resolution the combined values.
     <hr>
     Remote Sites:
     <br>
