--- a/public/wcAdminPanel.html
+++ b/public/wcAdminPanel.html
@@ -64,7 +64,7 @@
     <br>
     <input type="text" id="cfgPortSecure"> Secure Port Number (Default: 9090) To remove the need to enter the port number in the url, use port 443.
     <hr>
-    Resolution of a single screen:
+    Resolution of a display:
     <br>
     <input type="text" id="cfgRwidth"> Width
     <br>
