fixes to admin panel pathing saves on windows
Former-commit-id: 549dd474dcde07fe814372eb33543aa7db4a0f73
Former-commit-id: 0cacc41f9ba9d49f7a7ba2395920a4c9b1e99e42

--- a/public/wcAdminPanel.html
+++ b/public/wcAdminPanel.html
@@ -164,6 +164,7 @@
     <br><br>
     <button onclick="sendConfigFileData()" style='font-size:30px'> Save </button>
     <span id='warnPasswordMismatch' style='color:red;visibility:hidden'> One of the passwords do not match the confirmation. </span> 
+    <span id='warnImageSVGpath' style='color:red;visibility:hidden'> Double check your path for background image or SVG. Remember it should be relative from the "sage2\public" folder.</span> 
 
     <br><br>
     <br><br>
