--- a/public/display.html
+++ b/public/display.html
@@ -28,6 +28,7 @@
 <script src="lib/glMatrix-0.9.5.min.js"></script>
 <script src="lib/observe.poly.js"></script>
 <script src="lib/moment.min.js"></script>
+<script async src="https://code.jquery.com/jquery-1.6.2.min.js"></script>
 
 <!-- SAGE2 code -->
 <script src="src/websocket.io.js"></script>
