--- a/public/index.html
+++ b/public/index.html
@@ -143,6 +143,12 @@
 						<label for="sessions-dir">Sessions</label>
 						<ul id="sessions" class="fileItem"></ul>
 					</li>
+					<li>
+						<input type="checkbox" id="xmls-dir">
+						<label for="xmls-dir">XMLs</label>
+						<ul id="xmls" class="fileItem"></ul>
+					</li>
+	
 				</ul>
 			</div>
 		</div>
