Right click context menu replacement and start of UI to Display messaging

--- a/public/index.html
+++ b/public/index.html
@@ -417,6 +417,10 @@
 		</div>
 		<img alt="closeMobileSAGE2Pointer" id="closeMobileSAGE2Pointer" src="images/closemobilepointer.svg" width="32" height="32" style="position:absolute; left:6px; top:6px;"/>
 	</div>
+
+	<div id="rmbContextMenu">
+		
+	</div>
 	
 	
 	<!-- invisible text to test rendered width -->
