vxlab UI customization

--- a/public/index.html
+++ b/public/index.html
@@ -84,7 +84,20 @@
 					<td id="infoContainer">
 						<img id="info"         alt="info"         src="images/ui/[graycircle]-info.svg"         width="48" height="48"/>
 						<p id="infoLabel">Information</p>
+					<td>
+						<a target="_vxlab_cmd" href="http://10.234.2.30:8085/sage-browser">Web browser</a>
+						<br><a target="_vxlab_cmd" href="http://10.234.2.30:8085/mydesktop">MyDesktop</a>
+						<br><a target="_vxlab_panel" href="http://10.234.2.30/~sage/">More...</a>
 					</td>
+                                        <td>
+                                                <a target="_vxlab_cmd" href="http://10.234.2.30:8085/capture-laptop1-start">PC1 on</a>
+                                                <a target="_vxlab_cmd" href="http://10.234.2.30:8085/capture-laptop2-start">PC2 on</a>
+                                                <a target="_vxlab_cmd" href="http://10.234.2.30:8085/capture-vc1-start">VC on</a>
+                                                <br>
+                                                <a target="_vxlab_cmd" href="http://10.234.2.30:8085/capture-laptop1-stop">PC1 off</a>
+                                                <a target="_vxlab_cmd" href="http://10.234.2.30:8085/capture-laptop2-stop">PC2 off</a>
+                                                <a target="_vxlab_cmd" href="http://10.234.2.30:8085/capture-vc1-stop">VC off</a>
+                                        </td>
 				</tr>
 			</table>
 		</div>
