further testing and refinement with message passing. Image test.

--- a/public/index.html
+++ b/public/index.html
@@ -423,6 +423,16 @@
 
 	<div id="uiNoteMaker">
 	</div>
+	<div id="uiDrawZone" class="dialog">
+		<canvas id="uiDrawZoneCanvas" width="500" height="500">
+		</canvas>
+		<br><br>
+		<button id="uiDrawZoneSendButton">
+			Send Drawing
+		</button>
+	</div>
+	<div id="uiDrawZoneShowHideButton">
+	</div>
 	
 	
 	<!-- invisible text to test rendered width -->
