Formatting fixes for the note and draw

--- a/public/index.html
+++ b/public/index.html
@@ -430,14 +430,14 @@
 	<div id="rmbContextMenu">
 	</div>
 
-	<div id="uiNoteMaker" class="dialog" style="horizontal-align:center;">
+	<div id="uiNoteMaker" class="dialog">
 			<br>
 			&nbsp&nbsp&nbsp
 			<textarea id="uiNoteMakerInputField"></textarea>
 			&nbsp&nbsp&nbsp
 			<br>
-			&nbsp&nbsp&nbsp
-			<button id="uiNoteMakerSendButton">&nbspMake Note [Enter]&nbsp</button>
+			<br>&nbsp
+			<span id="uiNoteMakerSendButton" class="button">&nbspMake Note [Enter]&nbsp</span>
 			<br>&nbsp
 	</div>
 	<div id="uiDrawZone" class="dialog">
@@ -447,9 +447,7 @@
 		&nbsp&nbsp&nbsp
 		<input id="uiDrawLineThicknessSet" value="1" size="3" type="number">
 		&nbsp&nbsp&nbsp
-		<button id="uiDrawZoneSendButton">
-			Send Drawing
-		</button>
+		<span id="uiDrawZoneSendButton" class="button">&nbspSend Drawing&nbsp</span>
 		<br><br>
 		&nbsp&nbsp&nbsp
 		<canvas id="uiDrawZoneCanvas" width="500" height="500" style="border:1px solid black">
