Tested working shared drawing space. Needs cleanup, has old code in case things broke.

--- a/public/index.html
+++ b/public/index.html
@@ -455,13 +455,10 @@
 				<td id='uidztp4' class='uidzBarBox'> <div class='uidzBarAll uidzBarS4'> </div> </td>
 				<td id='uidztp5' class='uidzBarBox'> <div class='uidzBarAll uidzBarS5'> </div> </td>
 				<td id='uidztp6' class='uidzBarBox'> <div class='uidzBarAll uidzBarS6'> </div> </td>
-				<td id='uidztp7' class='uidzBarBox'> <div class='uidzBarAll uidzBarS7'> </div> </td><td>
-					&nbsp&nbsp&nbsp
-					<span id="uiDrawZoneSendButton" class="button">Clear</span>
-				</td>
+				<td id='uidztp7' class='uidzBarBox'> <div class='uidzBarAll uidzBarS7'> </div> </td>
 				<td>
-					&nbsp&nbsp&nbsp
-					<span id="uiDrawZoneSendButton" class="button">Send Drawing</span>
+					&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+					<span id="uiDrawZoneNewButton" class="button">New Doodle</span>
 				</td>
 			</tr>
 		</table>
@@ -470,7 +467,12 @@
 		<canvas id="uiDrawZoneCanvas" width="500" height="500" style="border:1px solid black">
 		</canvas>
 		&nbsp&nbsp&nbsp
-		<br><br>
+		<br>
+		<br>
+		<div style="position:relative; text-align:right; right:5%">
+			<span id="uiDrawZoneCloseButton" class="button">Close</span>
+		</div>
+		<br>
 	</div>
 	<div id="uiDrawZoneEraseReference" style="position:absolute;top:-100;left:-100;width:1;border:1px solid black;border-radius:50%;z-index:10003;pointer-events:none" >
 	</div>
