Added color functionality to note. Anonymous option. Updated session save state.

--- a/public/index.html
+++ b/public/index.html
@@ -391,6 +391,27 @@
 
 	<div id="uiNoteMaker" class="dialog">
 			<br>
+			<div id="uiNoteMakerOptions">
+				<table cellSpacing="5">
+					<tr>
+						<input type="checkbox" id="uiNoteMakerCheckAnonymous"></input>
+						<label for="uiNoteMakerCheckAnonymous"> Anonymous</label>
+					</tr>
+					<tr>
+						<td>&nbsp&nbsp</td>
+						<td> <div id="uinmColorPick1"></div> </td>
+						<td> <div id="uinmColorPick2"></div> </td>
+						<td> <div id="uinmColorPick3"></div> </td>
+					</tr>
+					<tr>
+						<td>&nbsp&nbsp</td>
+						<td> <div id="uinmColorPick4"></div> </td>
+						<td> <div id="uinmColorPick5"></div> </td>
+						<td> <div id="uinmColorPick6"></div> </td>
+					</tr>
+				</table>
+			</div>
+			<br>
 			&nbsp&nbsp&nbsp
 			<textarea id="uiNoteMakerInputField"></textarea>
 			&nbsp&nbsp&nbsp
