All files changed in this commit are necessary to get a custom type to show up in the UI and correctly launch the associated app. NOTE: Will not be correctly initialized.

--- a/public/index.html
+++ b/public/index.html
@@ -153,6 +153,11 @@
 						<label for="sessions-dir">Sessions</label>
 						<ul id="sessions" class="fileItem"></ul>
 					</li>
+					<li>
+						<input type="checkbox" id="notes-dir">
+						<label for="notes-dir">Notes</label>
+						<ul id="notes" class="fileItem"></ul>
+					</li>
 				</ul>
 			</div>
 		</div>
