Note maker now has a close button

--- a/public/index.html
+++ b/public/index.html
@@ -468,6 +468,7 @@
 			&nbsp&nbsp&nbsp
 			<br>
 			<br>&nbsp
+			<span id="uiNoteMakerCloseButton" class="button">Close</span>&nbsp&nbsp&nbsp
 			<span id="uiNoteMakerSendButton" class="button">Make Note [Enter]</span>
 			<br>&nbsp
 	</div>
